src/styles.scss
html {
}

body {
}

.svg-icon-bg.iconArrowDownAlt {
	width: 10px !important;
	--bg-icon: url('data:image/svg+xml;utf-8,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.0142 7.42843L14.6042 6.01843L9.01416 11.6084L3.42416 6.01843L2.01416 7.42843L9.01416 14.4284L16.0142 7.42843Z" fill="black"/></svg>');
}

.svg-icon-bg.iconSubscript {
	--bg-icon: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 488.09"><path fill-rule="nonzero" d="M507.35 488.09H374.24c-2.56 0-4.64-2.08-4.64-4.65v-8.23c0-1.28.52-2.44 1.35-3.28l72.71-83.84c6.84-7.86 12.77-15.21 17.76-22.02 4.96-6.75 8.97-12.94 12.04-18.57 3.01-5.52 5.26-10.78 6.74-15.79 1.45-4.93 2.17-9.69 2.17-14.24 0-14.91-4.04-26.45-12.12-34.62-3.97-4.02-8.88-7.05-14.71-9.06-6.05-2.06-13.11-3.1-21.21-3.1-8.58 0-16.13 1.23-22.64 3.68-6.36 2.4-11.81 6-16.32 10.79a48.855 48.855 0 0 0-10.31 16.86c-2.3 6.4-3.46 13.61-3.46 21.61 0 2.56-2.08 4.64-4.64 4.64h-6.99c-2.19 0-4.02-1.51-4.52-3.54l-.19-.58c-.15-.44-.22-.89-.24-1.34-.27-9.61 1.12-18.53 4.18-26.75 3.07-8.25 7.81-15.78 14.17-22.53 6.36-6.82 13.85-11.96 22.45-15.38 8.49-3.39 18-5.1 28.51-5.1 9.74 0 18.56 1.4 26.45 4.2 7.98 2.84 15 7.11 21.05 12.81 6.11 5.71 10.71 12.59 13.77 20.6 3 7.87 4.51 16.82 4.51 26.81 0 6.57-1.09 13.25-3.24 20.01-2.09 6.66-5.27 13.39-9.47 20.19l-.14.21c-4.14 6.61-9.03 13.64-14.66 21.07-5.64 7.45-12.15 15.47-19.52 24.05l-57.82 67.56h112.09c2.57 0 4.65 2.08 4.65 4.65v8.23c0 2.57-2.08 4.65-4.65 4.65zM174.92 172.12 315.07 1.7c.89-1.09 2.33-1.67 3.79-1.68L339.31 0c2.56 0 4.64 1.77 4.64 3.95 0 .92-.38 1.77-1 2.44L191.31 189.96l158.25 191.57c1.47 1.77.97 4.23-1.12 5.48-.81.49-1.74.72-2.67.72l-20.44.01c-1.73 0-3.23-.8-4.04-1.99L174.9 207.77 28.68 386.04c-.9 1.09-2.34 1.68-3.79 1.68l-20.24.02c-2.57 0-4.65-1.77-4.65-3.95 0-.92.38-1.77 1-2.44l158.11-191.39L7.01 6.22C5.54 4.44 6.04 1.98 8.13.73 8.94.24 9.88.01 10.8.01L31.56 0c1.66 0 3.11.74 3.93 1.85l139.43 170.27z"/></svg>');
}

.svg-icon-bg.iconSuperscript {
	--bg-icon: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 475.8"><path fill-rule="nonzero" d="m174.2 246.66 92.54-125.3h76.65L212.88 295.35l135.9 180.45H272L174.16 344 76.63 475.8H0l135.89-180.43L5.07 121.36h77.04l92.09 125.3zm322.38-33.24H373.5v-24.13l2.42-6.43c5.46-6.29 60.35-69.48 60.35-69.63 2.94-3.38 5.44-6.34 7.48-8.87 2.24-2.78 4.34-5.51 6.29-8.17 1.95-2.65 3.64-5.09 5.08-7.31 1.49-2.29 2.77-4.43 3.84-6.39a63.99 63.99 0 0 0 2.69-5.53c.74-1.74 1.34-3.39 1.8-4.96.41-1.38.73-2.83.95-4.32.2-1.32.31-2.63.31-3.91 0-4.79-.59-8.86-1.77-12.22-1.05-3-2.61-5.55-4.66-7.63-.9-.89-1.97-1.73-3.2-2.49v-.05c-1.26-.77-2.64-1.42-4.14-1.94-1.76-.58-3.74-1.04-5.92-1.36-2.22-.33-4.72-.49-7.5-.49-2.98 0-5.62.19-7.92.56-2.26.37-4.37.92-6.29 1.64-1.75.66-3.37 1.49-4.84 2.46h-.04c-1.36.9-2.67 2.01-3.9 3.31-1.34 1.43-2.5 2.95-3.46 4.53a27.446 27.446 0 0 0-2.46 5.1c-.68 1.89-1.2 3.95-1.56 6.16-.34 2.15-.51 4.62-.51 7.39v15.42h-32.45l-2.48-8.39c-1.61-5.43-2.03-10.97-1.6-16.39.46-5.81 1.94-11.59 3.94-16.98 1.5-4.03 3.43-7.92 5.78-11.67v-.04c2.32-3.68 5-7.15 8.05-10.4 3.16-3.38 6.62-6.36 10.36-8.93 3.67-2.51 7.69-4.64 12.03-6.37a67.26 67.26 0 0 1 13.17-3.73v-.05C427.86.41 432.59 0 437.52 0c4.38 0 8.74.34 13.08 1.03 4.32.69 8.39 1.71 12.18 3.05 3.9 1.38 7.65 3.18 11.25 5.36h.04c3.51 2.13 6.78 4.63 9.79 7.46 3.11 2.9 5.85 6.14 8.23 9.69 2.39 3.58 4.35 7.37 5.87 11.34 1.47 3.86 2.58 8.02 3.33 12.45.72 4.33 1.09 8.8 1.09 13.39 0 3.11-.28 6.39-.84 9.83-.51 3.23-1.3 6.5-2.35 9.8-.94 3.08-2.2 6.27-3.74 9.55a92.644 92.644 0 0 1-5.12 9.43l-.05.09c-1.96 3.13-3.91 6.09-5.82 8.84-2.02 2.9-4.26 5.98-6.7 9.2-2.15 2.83-4.71 6.08-7.67 9.74-2.77 3.41-5.63 6.84-8.57 10.25l-30.3 35.42H512v37.5h-15.42z"/></svg>');
}

.svg-icon-bg.iconUnderline {
	--bg-icon: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 339 511.27"><path fill-rule="nonzero" d="M321.18 2.61v288.83c0 24.07-3.51 45.36-10.5 63.83-7.04 18.57-17.61 34.28-31.67 47.13-14.05 12.82-30.21 22.46-48.47 28.89-18.21 6.41-38.51 9.63-60.89 9.63-22.55 0-42.96-3.22-61.23-9.64-18.37-6.45-34.55-16.13-48.54-29-14.04-12.92-24.58-28.65-31.59-47.18-6.98-18.46-10.47-39.68-10.47-63.66V2.61c0-1.44 1.17-2.61 2.61-2.61h16.16c1.43 0 2.61 1.17 2.61 2.61v288.83c0 20.15 3.03 38.09 9.1 53.78 6.03 15.62 15.1 29.08 27.19 40.35 12.16 11.33 26.06 19.8 41.69 25.42 15.67 5.64 33.16 8.45 52.47 8.45 19.21 0 36.62-2.81 52.24-8.45 15.58-5.62 29.46-14.09 41.62-25.42 12.09-11.27 21.15-24.73 27.19-40.35 6.07-15.69 9.1-33.63 9.1-53.78V2.61c0-1.44 1.17-2.61 2.61-2.61h16.16c1.44 0 2.61 1.17 2.61 2.61zM0 491.75h339v19.52H0v-19.52z"/></svg>');
}

.svg-icon-bg.iconIndent {
	--bg-icon: url('data:image/svg+xml;utf-8,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16 4H2V2H16V4Z" fill="black"/><path d="M8 6V8H16V6H8Z" fill="black"/><path d="M16 16H2V14H16V16Z" fill="black"/><path d="M8 12H16V10H8V12Z" fill="black"/><path d="M6.5 9L2 5V13L6.5 9Z" fill="black"/></svg>');
}

.svg-icon-bg.iconOutdent {
	--bg-icon: url('data:image/svg+xml;utf-8,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16 4H2V2H16V4Z" fill="black"/><path d="M8 6V8H16V6H8Z" fill="black"/><path d="M16 16H2V14H16V16Z" fill="black"/><path d="M8 12H16V10H8V12Z" fill="black"/><path d="M1.5 9L6 5V13L1.5 9Z" fill="black"/></svg>');
}

.svg-icon-bg.iconScreenFull {
	--bg-icon: url('data:image/svg+xml;utf-8,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 1H7V3H3V7H1V3C1 1.89543 1.89543 1 3 1Z" fill="black"/><path d="M11 3V1H15C16.1046 1 17 1.89543 17 3V7H15V3H11Z" fill="black"/><path d="M3 11H1V15C1 16.1046 1.89543 17 3 17H7V15H3V11Z" fill="black"/><path d="M15 11H17V15C17 16.1046 16.1046 17 15 17H11V15H15V11Z" fill="black"/></svg>');
}

.svg-icon-bg.iconScreenNormal {
	--bg-icon: url('data:image/svg+xml;utf-8,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5 7L1 7L1 5L5 5L5 1L7 1L7 5C7 6.10457 6.10457 7 5 7Z" fill="black"/><path d="M17 5V7L13 7C11.8954 7 11 6.10457 11 5L11 1L13 1L13 5L17 5Z" fill="black"/><path d="M5 17H7L7 13C7 11.8954 6.10457 11 5 11L1 11L1 13L5 13L5 17Z" fill="black"/><path d="M13 17H11V13C11 11.8954 11.8954 11 13 11H17V13H13V17Z" fill="black"/></svg>');
}
.s-editor-btn.is-disabled {
	cursor: not-allowed;
	background: 0 0 !important;
}

.s-editor-btn.is-disabled:hover {
	background: var(--_bu-bg-hover) !important;
}

.s-editor-btn:focus {
	background-color: initial !important;
}

.s-btn__dropdown {
	padding-right: unset !important;
}

.s-btn__dropdown::after {
	display: none;
}

.mw-split-button:hover {
	// border: solid var(--black-050) 1px;
	border-radius: 3px;
	box-shadow: 0 0 0 1px var(--theme-secondary-100) inset;
}

.mw-split-button > button {
	border-bottom-right-radius: 0px;
	border-top-right-radius: 0px;
}

:focus-visible {
	outline: none;
}

.s-btn:hover {
	background-color: var(--theme-secondary-100) !important;
}

.s-btn:focus {
	box-shadow: none !important;
}

.mw-dropdown-button {
	border-radius: 3px;

	[data-key="dropdown-icon"] {
		margin-left: 8px;
	}
}

.mw-split-button {
	[data-key="dropdown-icon"] {
		margin-left: initial;
	}
}

.mw-dropdown-button.is-selected {
	background-color: var(--theme-secondary-150) !important;
}

.mw-split-button .mw-dropdown-button {
	padding-left: 3px !important;
	padding-right: 3px !important;
	border-top-left-radius: 0px !important;
	border-bottom-left-radius: 0px !important;
}

.s-btn.is-selected,
.s-btn:active {
	background-color: var(--theme-secondary-150) !important;
}

.mw-menu-block__separator {
	width: 1px;
	// color: #333;
	background-color: #ccced1;
	align-self: stretch;
	// height: 30px;
	// display: inline-block;
}

div[id^="heading-dropdown-popover"] p,
div[id^="heading-dropdown-popover"] h1,
div[id^="heading-dropdown-popover"] h2,
div[id^="heading-dropdown-popover"] h3,
div[id^="heading-dropdown-popover"] h4,
div[id^="heading-dropdown-popover"] h5,
div[id^="heading-dropdown-popover"] h6 {
	margin: 0;
}

div[id^="heading-dropdown-popover"] .s-editor--dropdown-item {
	min-height: 30px;
}

button[data-key^="heading-dropdown"] span[data-key="innerText"] {
	width: 70px;
}
button[data-key^="font-size-dropdown"] span[data-key="innerText"] {
	width: 30px;
}

button[id^="font-family-dropdown"] {
	text-overflow: ellipsis;
	overflow: hidden;
	white-space: nowrap;
}

button[id^="font-family-dropdown"] span[data-key="innerText"] {
	width: 50px;
	text-overflow: ellipsis;
	overflow: hidden;
	white-space: nowrap;
}

// Task List
ul[data-type="taskList"] {
	list-style: none !important;
	padding: 0 !important;

	p {
		margin: 0 !important;
	}

	li {
		display: flex !important;

		> label {
			flex: 0 0 auto !important;
			margin-right: 0.5rem !important;
			user-select: none !important;

			input {
				vertical-align: middle;
			}
		}

		> div {
			flex: 1 1 auto !important;
		}
	}
}

// ul {
// 	list-style-type: initial;
// }

.mw-editor--fullscreen {
	border-radius: 0 !important;
	bottom: 0 !important;
	height: 100vh !important;
	left: 0 !important;
	margin: 0 !important;
	padding: 0 !important;
	position: fixed !important;
	right: 0 !important;
	top: 0 !important;
	width: 100% !important;
	z-index: 500;
}

#editor-container {
	margin: 200px;
}

